# ktexteditor-pyside6

./: CMakeLists.txt  README.md  bindings.h  bindings.xml  default.nix
doc/: fixme-PySide-Signal-registerSignals.txt
examples/: minimal_view.py
